@@ -1,3 +1,8 @@
+2006-04-20  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_FamilyViews.py: clean up
+	* src/DataViews/_PedigreeViews.py: clean up
+	* src/RelLib/_Name.py: fix type on set_type
+
 2006-04-20  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_GrampsBSDDB.py: Upgrade to new types.
 	* src/GrampsDb/_ReadGedcom.py: Adapt to new types.
